--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+  --primary-color: #8555e9;
+  --background-color: #101318;
+  --text-color: #fcffff;
+  --description-color: #717078;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
