--- a/frontend/src/app/components/templates/footer/footer.component.css
+++ b/frontend/src/app/components/templates/footer/footer.component.css
@@ -1,9 +1,9 @@
 .footer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
-  padding: 3rem 1rem;
+  padding: 1.3rem 1rem;
 
   background: var(--background);
 
@@ -15,10 +15,10 @@
 .footer span {
   display: flex;
   align-items: center;
-  flex-direction: column;
 }
 
 .footer span a {
+  margin-left: 0.5rem;
   text-decoration: none;
   color: var(--primary-color);
 }
