feat: criando a página home

--- a/frontend/src/app/components/templates/footer/footer.component.html
+++ b/frontend/src/app/components/templates/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="footer">
   <span>
     <strong>Desenvolvido por : </strong>
-    <a href="https://www.linkedin.com/in/marcus-vinicius-silva-costa-6098911a4/">
+    <a href="https://www.linkedin.com/in/marcus-vinicius-silva-costa-6098911a4/" target="__blank">
       Marcus Vinicius
     </a>
   </span>
