feat: adicionando rotas e navegação

--- a/frontend/src/app/components/templates/header/header.component.html
+++ b/frontend/src/app/components/templates/header/header.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="header mat-elevation-z2">
   <span>
-    <a href="/"><img class="logo" src="/assets/img/logo.svg" alt="Inventorium"></a>
+    <a routerLink="/"><img class="logo" src="/assets/img/logo.svg" alt="Inventorium"></a>
   </span>
 
   <nav class="menu">
-    <a mat-button href="/">Início</a>
-    <a mat-button href="products">Produtos</a>
+    <a mat-button routerLink="/">Início</a>
+    <a mat-button routerLink="/products">Produtos</a>
   </nav>
 </mat-toolbar>
