WIP: adicionando estrutura inicial da listagem de produtos

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,7 +3,9 @@
     <div class="text-container">
       <h1>O melhor serviço de adminstração de inventário!</h1>
       <p>Com o Inventorium você vai turbinar a maneira de controlar o estoque da sua loja, isso com grande facilidade e praticidade.</p>
-      <button mat-flat-button>Criar estoque</button>
+      <button mat-flat-button routerLink="/products">
+        Criar estoque
+      </button>
     </div>
     
     <img src="/assets/img/illustration.svg" alt="Illustration">
