refactor: reajustando placeholder  e label do nome do produto

--- a/frontend/src/app/pages/product-create/product-create.component.html
+++ b/frontend/src/app/pages/product-create/product-create.component.html
@@ -9,8 +9,8 @@
         <mat-divider class="divider"></mat-divider>
         <div class="form-content">
            <!-- Input de Nome -->
-          <label class="label">Nome</label>
-          <input class="input" type="text" placeholder="Digite seu nome">
+          <label class="label">Nome do produto</label>
+          <input class="input" type="text" placeholder="Digite o nome do produto">
         </div>
 
         <div class="form-content">
