feat: adicionando navegação dos componentes

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="text-container">
       <h1>O melhor serviço de adminstração de inventário!</h1>
       <p>Com o Inventorium você vai turbinar a maneira de controlar o estoque da sua loja, isso com grande facilidade e praticidade.</p>
-      <button mat-flat-button routerLink="/products">
+      <button mat-flat-button (click)="navigateToProducts()">
         Criar estoque
       </button>
     </div>
