--- a/frontend/src/app/pages/products/products.component.html
+++ b/frontend/src/app/pages/products/products.component.html
@@ -1,7 +1,7 @@
 <main class="container">
   <div class="info-container">
     <h1>Listagem de produtos</h1>
-    <button mat-flat-button routerLink="/product-create">
+    <button mat-flat-button (click)="navigateToProductsCreate()">
       Adicionar produto
     </button>
   </div>
