refactor: ajustando rotas da aplicação

--- a/frontend/src/app/components/templates/header/header.component.html
+++ b/frontend/src/app/components/templates/header/header.component.html
@@ -5,6 +5,6 @@
 
   <nav class="menu">
     <a mat-button routerLink="/">Início</a>
-    <a mat-button routerLink="/products">Produtos</a>
+    <a mat-button routerLink="/product">Produtos</a>
   </nav>
 </mat-toolbar>
