feat: criação do service de produtos

--- a/frontend/src/app/pages/product/create/product-create.component.html
+++ b/frontend/src/app/pages/product/create/product-create.component.html
@@ -22,7 +22,7 @@
 
       <footer class="buttons-container">
         <button mat-stroked-button color="warn" (click)="navigateToProducts()">Cancelar</button>
-        <button class="primary-button" mat-flat-button (click)="navigateToProducts()">Salvar</button>
+        <button class="primary-button" mat-flat-button (click)="createProduct()">Salvar</button>
       </footer>
       
     </div>
