--- a/frontend/src/app/pages/product/list/product-list.component.html
+++ b/frontend/src/app/pages/product/list/product-list.component.html
@@ -6,4 +6,34 @@
     </button>
   </div>
 
+  <div class="list-container">
+    <div class="total-container">
+      <h2>Quantidade total de produtos</h2>
+      <span>5</span>
+    </div>
+
+    <table mat-table [dataSource]="products" class="mat-elevation-z2 table">
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+  
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Preço</th>
+        <td mat-cell *matCellDef="let row">{{ row.price | currency: 'BRL' }}</td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+
 </main>
