feat: renderizando o tamanho da lista de produtos no html

--- a/frontend/src/app/pages/product/list/product-list.component.html
+++ b/frontend/src/app/pages/product/list/product-list.component.html
@@ -9,7 +9,7 @@
   <div class="list-container">
     <div class="total-container">
       <h2>Quantidade total de produtos</h2>
-      <span>5</span>
+      <span id="totalProducts">{{ totalProducts }}</span>
     </div>
 
     <table mat-table [dataSource]="products" class="mat-elevation-z2 table">
