--- a/frontend/src/app/pages/product/list/product-list.component.html
+++ b/frontend/src/app/pages/product/list/product-list.component.html
@@ -30,6 +30,30 @@
         <th mat-header-cell *matHeaderCellDef>Preço</th>
         <td mat-cell *matCellDef="let row">{{ row.price | currency: 'BRL' }}</td>
       </ng-container>
+
+      <!-- Edit Column -->
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef>Editar</th>
+        <td mat-cell *matCellDef="let row">
+          <a class="edit-icon">
+            <i class="material-icons">
+              edit
+            </i>
+          </a>
+        </td>
+      </ng-container>
+
+      <!-- Delete Column -->
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>Deletar</th>
+        <td mat-cell *matCellDef="let row">
+          <a class="delete-icon" color="warn">
+            <i class="material-icons">
+              delete
+            </i>
+          </a>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
