--- a/frontend/src/app/pages/product/list/product-list.component.html
+++ b/frontend/src/app/pages/product/list/product-list.component.html
@@ -35,7 +35,7 @@
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef>Editar</th>
         <td mat-cell *matCellDef="let row">
-          <a class="edit-icon">
+          <a class="edit-icon" routerLink="/product/update/{{ row.id }}">
             <i class="material-icons">
               edit
             </i>
