--- a/frontend/src/app/pages/product/list/product-list.component.html
+++ b/frontend/src/app/pages/product/list/product-list.component.html
@@ -11,52 +11,39 @@
       <h2>Quantidade total de produtos</h2>
       <span id="totalProducts">{{ totalProducts }}</span>
     </div>
+    
+    <table class="table-prodcuts">
+      <thead class="thead-products">
+        <tr>
+          <th>Id</th>
+          <th>Nome</th>
+          <th>Preço</th>
+          <th>Editar</th>
+          <th>Deletar</th>
+        </tr>
+      </thead>
 
-    <table mat-table [dataSource]="products" class="mat-elevation-z2 table">
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-      </ng-container>
-  
-      <!-- Price Column -->
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef>Preço</th>
-        <td mat-cell *matCellDef="let row">{{ row.price | currency: 'BRL' }}</td>
-      </ng-container>
-
-      <!-- Edit Column -->
-      <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef>Editar</th>
-        <td mat-cell *matCellDef="let row">
-          <a class="edit-icon" routerLink="/product/update/{{ row.id }}">
-            <i class="material-icons">
-              edit
-            </i>
-          </a>
-        </td>
-      </ng-container>
-
-      <!-- Delete Column -->
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>Deletar</th>
-        <td mat-cell *matCellDef="let row">
-          <a class="delete-icon" color="warn">
-            <i class="material-icons">
-              delete
-            </i>
-          </a>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tbody *ngFor="let product of products" class="tbody-products">
+        <tr id="{{ product.id }}">
+          <td>{{ product.id }}</td>
+          <td>{{ product.name }}</td>
+          <td>{{ product.price | currency: 'BRL' }}</td>
+          <td>
+            <a class="edit-icon" routerLink="/product/update/{{ product.id }}">
+              <i class="material-icons">
+                edit
+              </i>
+            </a>
+          </td>
+          <td>
+            <a  class="delete-icon" color="warn">
+              <i class="material-icons">
+                delete
+              </i>
+            </a>
+          </td>
+        </tr>
+      </tbody>
     </table>
   </div>
 
