--- a/frontend/src/app/pages/product/list/product-list.component.html
+++ b/frontend/src/app/pages/product/list/product-list.component.html
@@ -36,7 +36,7 @@
             </a>
           </td>
           <td>
-            <a  class="delete-icon" color="warn">
+            <a  class="delete-icon" color="warn" (click)="openModal()">
               <i class="material-icons">
                 delete
               </i>
